@@ -1,4 +1,5 @@
 import io.opentelemetry.gradle.OtelJavaExtension
+import org.gradle.api.JavaVersion
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 
 plugins {
@@ -33,7 +34,7 @@ tasks.withType<AbstractArchiveTask>().configureEach {
 
 java {
   toolchain {
-    languageVersion.set(JavaLanguageVersion.of(17))
+    languageVersion.set(JavaLanguageVersion.of(21))
   }
 
   withJavadocJar()
@@ -42,7 +43,7 @@ java {
 
 checkstyle {
   configDirectory.set(file("$rootDir/buildscripts/"))
-  toolVersion = "12.0.1"
+  toolVersion = "13.0.0"
   isIgnoreFailures = false
   configProperties["rootDir"] = rootDir
 }
@@ -74,7 +75,7 @@ val testJavaVersion = gradle.startParameter.projectProperties.get("testJavaVersi
 tasks {
   withType<JavaCompile>().configureEach {
     with(options) {
-      release.set(8)
+      release.set(otelJava.minJavaVersionSupported.map { it.majorVersion.toInt() })
 
       if (name != "jmhCompileGeneratedClasses") {
         compilerArgs.addAll(
@@ -88,6 +89,8 @@ tasks {
             "-Xlint:-processing",
             // We suppress the "options" warning because it prevents compilation on modern JDKs
             "-Xlint:-options",
+            "-Xlint:-serial",
+            "-Xlint:-this-escape",
             // Fail build on any warning
             "-Werror",
           ),
@@ -105,14 +108,6 @@ tasks {
 
   withType<Test>().configureEach {
     useJUnitPlatform()
-
-    if (testJavaVersion != null) {
-      javaLauncher.set(
-        javaToolchains.launcherFor {
-          languageVersion.set(JavaLanguageVersion.of(testJavaVersion.majorVersion))
-        },
-      )
-    }
 
     val defaultMaxRetries = if (System.getenv().containsKey("CI")) 2 else 0
     val maxTestRetries = gradle.startParameter.projectProperties["maxTestRetries"]?.toInt() ?: defaultMaxRetries
@@ -172,6 +167,19 @@ tasks {
   }
 }
 
+afterEvaluate {
+  tasks.withType<Test>().configureEach {
+    if (testJavaVersion != null) {
+      javaLauncher.set(
+        javaToolchains.launcherFor {
+          languageVersion.set(JavaLanguageVersion.of(testJavaVersion.majorVersion))
+        }
+      )
+      isEnabled = isEnabled && testJavaVersion >= otelJava.minJavaVersionSupported.get()
+    }
+  }
+}
+
 // Add version information to published artifacts.
 plugins.withId("otel.publish-conventions") {
   tasks {
@@ -208,6 +216,10 @@ val dependencyManagement by configurations.creating {
   isCanBeResolved = false
 }
 
+val mockitoAgent by configurations.creating {
+  extendsFrom(dependencyManagement)
+}
+
 dependencies {
   dependencyManagement(platform(project(":dependencyManagement")))
   afterEvaluate {
@@ -217,6 +229,8 @@ dependencies {
       }
     }
   }
+
+  mockitoAgent("org.mockito:mockito-core")
 
   compileOnly("com.google.auto.value:auto-value-annotations")
   compileOnly("com.google.code.findbugs:jsr305")
@@ -264,6 +278,19 @@ testing {
       all {
         testTask.configure {
           systemProperty("java.util.logging.config.class", "io.opentelemetry.internal.testing.slf4j.JulBridgeInitializer")
+
+          // Starting in java 21, dynamically attaching agents triggers warnings. Mockito depends on
+          // agents to redefine classes. Hence, on java 21+ we get warnings of the form:
+          //    WARNING: A Java agent has been loaded dynamically (/Users/jberg/.gradle/caches/modules-2/files-2.1/net.bytebuddy/byte-buddy-agent/1.12.19/450917cf3b358b691a824acf4c67aa89c826f67e/byte-buddy-agent-1.12.19.jar)
+          //    WARNING: If a serviceability tool is in use, please run with -XX:+EnableDynamicAgentLoading to hide this warning
+          //    WARNING: If a serviceability tool is not in use, please run with -Djdk.instrument.traceUsage for more information
+          //    WARNING: Dynamic loading of agents will be disallowed by default in a future release
+          // To remove these warnings, we attach the byte-buddy-agent used by mockito directly.
+          val mockitoAgent: FileCollection = mockitoAgent
+          doFirst {
+            val mockitoAgentJar = mockitoAgent.files.single { it.name.contains("byte-buddy-agent")}
+            jvmArgs("-javaagent:${mockitoAgentJar}")
+          }
         }
       }
     }
